--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - npm install gitbook -g
+      - npm install gitbook-cli -g
   build:
     commands:
       - npm run build
