--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,5 @@ phases:
       - npm run build
 artifacts:
   files:
-    - '*'
-  base-directory:
-    - '_book
+    - '**/*'
+  base-directory: '_book'
